- Added Profiler - Removed almost all JVM options from jgroups.sh - Created transports (UDP, Server, NIO, TCP, JGroups) for RoundTrip - Replaced LinkedBlockingQueue with ArrayBlockingQueue in regular/oob/internal thread pools - Added percentiles to AverageMinMax - Added -use-wall-clock to RoundTrip - Added BundlerStressTest - Use G1 GC by default - Replaced BlockingQueue.poll() in TransferQueueBundler with BlockingQueue.drainTo() (https://issues.jboss.org/browse/JGRP-2076) - Correct use of CountDownLatch - Renamed RingBuffer to RingBufferSeqno and RingBufferLockless to RingBufferSeqnoLockless - First impl of RingBufferBundler - RingBufferBundler now accesses the RingBuffer directly - UPerf: targets list if pre-allocated rather than creating a new one on every PUT - Exposing bundler_wait_strategy and bundler_num_spins in TP. Can be changed at runtime - RingBufferBundler now uses only 2 iterations through the messages for bundling (instead of 3) - Added RingBufferBundlerLockless - Added RingBufferLockless2 - RingBuffer: use Condition.signalAll() instead of signal() to wake up all writers - Added RingBufferBundlerLockless - Added PaddedAtomic{Long,Integer,Boolean} to prevent false sharing - Added size() to Bundler